# base-python-project

./: .env-example  .gitignore  README.md  pyproject.toml
data/: .gitkeep
notebooks/: sandbox.ipynb
scripts/: script.py
src/myPackage/: myAnalysisTools.py
tests/: test_example.py
